part5/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: widgetario-web-internal
  labels:
    kubernetes.courselabs.co: hackathon
    app: widgetario
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:  
    app: widgetario
    component: web
  type: ClusterIP
